put data from View Records into a table and fixed bug with dropdown menu not overflowing div

--- a/distance_counter/static/css/style.css
+++ b/distance_counter/static/css/style.css
@@ -1,11 +1,11 @@
 .navbar {
-    overflow: hidden;
-    background-color: #333;
+    overflow: visible;
+    background-color: #7ca2e9;
 }
 
 .navbar a {
     float: left;
-    color: #f2f2f2;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -22,3 +22,12 @@
     color: white;
 }
 
+p {
+    margin-top: 0;
+    text-align: justify;
+    padding: 10px;
+}
+
+h1 {
+    padding-left: 10px;
+}
